--- a/bio.html
+++ b/bio.html
@@ -69,7 +69,7 @@
             <div class="row-fluid">
                 <div class="span4">
                     <div id="left">
-						<h2 class="name-display"><a href="//www.youngkwon.org/"><em>Young D. Kwon</em></a>
+						<h2 class="name-display"><a href="//theyoungkwon.github.io/"><em>Young D. Kwon</em></a>
 						</h2>
 						<ul class="nav">
 		                    <li class="inactive"><a href="index.html">Home</a></li>
@@ -171,7 +171,7 @@
 				<br>
                 <div class="container-fluid text-right">
                     <p>
-                        <!--<small>&copy; 2018 <a href="//www.youngkwon.org/">Young D. Kwon</a> ALL RIGHTS RESERVED</small><br>-->
+                        <!--<small>&copy; 2018 <a href="//theyoungkwon.github.io/">Young D. Kwon</a> ALL RIGHTS RESERVED</small><br>-->
                         <small>Acknowledgement to <a href="//juhokim.com" target="_blank">Prof. Juho Kim</a></small><br>
                         <small><a href="http://www.cse.ust.hk/~dcab/" target="_blank">Dr. Dimitris Chatzopoulos</a></small><br>
                         <small><em>Last Updated: Jul 1, 2019</em></small>
