--- a/bio.html
+++ b/bio.html
@@ -138,6 +138,63 @@
                                 <hr>
 
 
+                                <!--Education-->
+
+								<!-- <div class="row-fluid">
+									<div class="span12">
+										
+										<div class="section">Education</div>
+								
+		                                <div class="media">
+											<span class="pull-left edu-left span2"><img src="./images/cam_symbol.png" height=auto width=80% /></span>
+											<div class="media-body">
+												<p>
+													<a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a><br>
+													<i>Ph.D. in Computer Science</i>
+													&middot; Oct. 2020 ~ Present<br>
+													<i>Visiting Research Student in the Mobile Systems Group, Computer Laboratory</i>
+													&middot; Jul. 2019 ~ Dec. 2019
+													<br>
+												</p>
+											</div>
+										</div>
+
+										<div class="media">
+											<div class="pull-left edu-left span2"><img src="./images/HKUST_symbol.png" height=auto width=60% /></div>
+											<div class="media-body">
+												<p>
+													<a href="https://www.ust.hk/" target="_blank">HKUST</a><br>
+													<i>M.Phil. in Computer Science and Engineering</i>
+													&middot; Sep. 2017 ~ Jan. 2020<br>
+													<i>Thesis: Geographical Engagement and Churn Prediction in Location-Based Social Networks</i><br>
+													&bull; Total GPA: 4.0 / 4.3<br>
+													<i>Exchange Student Program in School of Engineering</i>
+													&middot; Jun. 2014 ~ May. 2015
+													<br>
+												</p>
+											</div>
+										</div>
+
+										<div class="media">
+											<div class="pull-left edu-left span2"><img src="./images/SKKU_symbol0.jpg" height=auto width=100% /></div>
+											<div class="media-body">
+												<p>
+													<a href="https://www.skku.edu/eng" target="_blank">SKKU</a><br>
+													<i>B.S. in Semiconductor Systems Engineering</i>
+													&middot; Mar. 2010 ~ Aug. 2016
+													<br>
+													&bull; <b>Valedictorian</b> in the college of Information and Communication Engineering (ICE)<br>
+													&bull; Major GPA: <b>4.38 / 4.5</b> | Total GPA: 4.26 / 4.5<br>
+												</p>
+											</div>
+										</div>
+
+									</div>
+								</div>
+								<hr>
+								<br> -->
+
+
                                 <!--Skills-->
                                 <div class="section">Skills</div>
                                     <p>
