--- a/research.html
+++ b/research.html
@@ -40,12 +40,12 @@
 
 		<!--Script-->
         <script src="js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-130561276-1"></script>
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-ZLBXN1B374"></script>
 		<script>
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
-		  gtag('config', 'UA-130561276-1');
+		  gtag('config', 'G-ZLBXN1B374');
 		</script>
         <script>
 			(function(h,o,t,j,a,r){
