minor update to sync with the recent change

--- a/bio.html
+++ b/bio.html
@@ -79,9 +79,9 @@
 		            	</ul>
 
 						<!-- <img class="profile" src="images/Me/1712_IMG_Young.jpg" alt="profile photo"><br /><br /> -->
-						<img class="profile" src="images/Me/1910_profile_pic.jpg" alt="profile photo"><br /><br />
-					    Ph.D. Student<br/>
-					    <a href="https://www.cl.cam.ac.uk/" target="_blank">Computer Laboratory</a><br>
+						<img class="profile" src="images/Me/2008_Young.jpg" alt="profile photo"><br /><br />
+					    Research Scientist<br/>
+					    <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">Samsung AI Center-Cambridge</a><br>
 				        <a href="https://www.cam.ac.uk/" target="_blank">University of Cambridge</a><br/><br/>
 					    <!-- <a href="files/CV_Young.html">Curriculum Vitae (PDF)</a> -->
 
@@ -93,8 +93,11 @@
 					    <div class="logo-wrapper">
                             <a href="index.html#want-to-meet">Want to Meet?</a><br>
                             <b>Contact:</b> ydk21&lt;at&gt;cam.ac.uk<br>
+                            <a href="https://research.samsung.com/aicenter_cambridge" target="_blank">
+						  		<img src="images/samsung_research_logo.png" width="100px">
+							</a><br><br>
                             <a href="https://www.cam.ac.uk/" target="_blank">
-						  		<img src="images/cam_logo.png" width="100px">
+						  		<img src="images/cam_logo.png" width="120px">
 							</a><br>
 							
 							<!--<a href="http://kixlab.org/">-->
